<resources>
    <string name="app_name">Family Tree</string>
    <string name="activity_addDetails_title">Add Details</string>
    <string name="action_settings">Settings</string>
    <string name="action_reload">Reload</string>
    <string name="action_add">Add</string>

    <string name="ic_keyboard_arrow_down">&#xe0c5;</string>
    <string name="ic_keyboard_arrow_left">&#xe0c6;</string>
    <string name="ic_keyboard_arrow_right">&#xe0c7;</string>
    <string name="ic_keyboard_arrow_up">&#xe0c8;</string>
    <string name="ic_add">&#xe006;</string>
    <string name="ic_email">&#xe087;</string>
    <string name="ic_close">&#xe048;</string>
    <string name="ic_folder">&#xe09d;</string>
    <string name="ic_account_box">&#xe003;</string>
    <string name="ic_account_circle">&#xe004;</string>
    <string name="ic_info">&#xe0be;</string>
    <string name="ic_info_outline">&#xe0bf;</string>

    <string name="error_message_empty">Please fill this field</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="ssn_id">Social Security Number</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth: dd/mm/yy</string>
    <string name="date_of_Death">Date of Death: dd/mm/yy</string>
    <string name="relation">Your relation</string>
    <string name="submit_btn">Submit</string>
    <string name="title_activity_show_details">Show Details</string>

</resources>
